--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>V2S Demo</title>
+  <title>BVS Demo Page</title>
   <style>
     body {
       background: #fff;
